# relativisticpy

./: .gitignore  AI-README.md  CHANGELOG.md  LICENSE  README.md  TODO.md  VISION.md  doc_builder.py  environment.yml  jupiter-lab-json-example.json  main.py  program.py  project.ipynb  pyproject.toml  requirements.txt  test.md  test_driven_script.ipynb  workbook.ipynb
.example-files/: Schild_solution.txt  black_hole.txt
.extra-docs/: Schild_solution.txt  black_hole.txt  derivatives.md
.github/workflows/: python-publish.yml  static.yml
docs/: About.md  CNAME  Contact.md  README.md  blackHoleExample.html  comingFeatures.html  contributions.html  examples.html  functions.html  index.html  instalation.html  kScalarExample.html  quickStartGuide.html  styles.css  tensorOperations.html
examples/: aaaaa.txt  basic_calculus_example.txt  black_hole.txt  comp_alice_bytes.huff  compressed.huff  compressed.txt  compressed_aaa.huff  compressed_alice.txt  dynamic.ipynb  interpreter.ipynb  langauge.ipynb  parser_refactor_tests.ipynb  set_path.py
examples /: langauge.ipynb  parser_refactor_tests.ipynb
examples /insights/: function_scopes.md
examples/insights/: functions.md  riccy.md  riemman.md
relativisticpy/: README.md  __init__.py
relativisticpy/algebras/: __init__.py  dirac_braket_notation.py  einstein_summation.py  jacobian_matrix.py  tensor_algebra.py
relativisticpy/base_tensor/: base.py  context.py  data_structure.py  gr_tensor.py  tensor_representations.py
relativisticpy/core/: __init__.py  decorators.py  einsteinarray.py  einsum_array.py  einsum_convention.py  exceptions.py  helpers.py  indices.py  (+6 more)
tests/: conftest.py
(+412 files in other folders)
