[tool.poetry]
name = "relativisticpy"
version = "1.2.5"
description = "A General Relativity package to solve symbolic General Relativistic equations."
readme = "README.md"
authors = ["Ashley Cottrell"]
include = ["assets/*"]

[build-system]
requires = ["setuptools>=40.8.0", "wheel", "sympy"]
build-backend = "setuptools.build_meta"

[tool.poetry.dependencies]
sympy = "^1.12"
pytest = "7.4.3"