[tool.poetry]
name = "relativisticpy"
version = "1.2.8"
description = "You love General Relativity? You hate tedious hand calculations? You love RelativisticPy!"
readme = "README.md"
authors = ["Ashley Cottrell"]
include = ["assets/*"]

[build-system]
requires = ["setuptools>=40.8.0", "wheel", "sympy"]
build-backend = "setuptools.build_meta"

[tool.poetry.dependencies]
sympy = "^1.12"
pytest = "7.4.3"