[tool.poetry]
name = "relativisticpy"
version = "1.2.9"
description = "You love General Relativity? You hate tedious hand calculations? You love RelativisticPy!"
readme = "README.md"
authors = ["Ashley Cottrell"]
include = ["assets/*"]

[build-system]
requires = ["setuptools>=40.8.0", "wheel", "sympy"]
build-backend = "setuptools.build_meta"

[tool.poetry.dependencies]
sympy = "^1.12"
pytest = "7.4.3"

[tool.pytest.ini_options]
addopts = "-ra -q"
testpaths = [
    "tests"
]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "network: tests that require network access"
]